# devantech_relays

./: README.md  network_socket.py  pyproject.toml  setup.py
devantech_relays/: eth.py
devantech_relays.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
