[tool.poetry]
name = "devantech_relays"
version = "0.1.1"
description = "Tool for controlling Devantech's ETH-series of relays"
authors = ["Karl Fredrik Haugland <kfh@tla.wtf>"]

[tool.poetry.dependencies]
python = ">=3,<4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"